# cartridges

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Added Games - Emulator Cheat Sheet  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cartridges.doap  hu.kramo.Cartridges.json  hu.kramo.GameShelf.json  meson.build  meson.options  meson_options.txt  pyproject.toml  pyrightconfig.json  python3-PyYAML.json  python3-modules.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  flatpak-builder.yml  publish-release.yml  windows.yml
.windows/: Cartridges.iss  cartridges
build-aux/flatpak/: page.kramo.Cartridges.Devel.json
build-aux/macos/: cartridges.spec  icon.icns
build-aux/windows/: Cartridges.iss.in  meson.build
cartridges/: __builtins__.pyi  __init__.py  __main__.py  application.py  application_delegate.py  cartridges.in  collections.py  config.py.in  config.pyi  cover.py  details_dialog.py  details_window.py  game.py  game_cover.py  gamepads.py  games.py  main.py  meson.build  preferences.py  shared.py.in  shared.pyi  sources.py  window.py
cartridges/errors/: friendly_error.py
cartridges/importer/: bottles_source.py  desktop_source.py  flatpak_source.py  heroic_source.py  importer.py  itch_source.py  legendary_source.py  location.py  lutris_source.py  retroarch_source.py  source.py  steam_source.py
cartridges/logging/: color_log_formatter.py  session_file_handler.py  setup.py
cartridges/sources/: __init__.py  desktop.py  flatpak.py  heroic.py  imported.py  itch.py  legendary.py  lutris.py  steam.py  waydroid.py
cartridges/store/: pipeline.py  store.py
cartridges/store/managers/: async_manager.py  cover_manager.py  display_manager.py  file_manager.py  manager.py  sgdb_manager.py  steam_api_manager.py
cartridges/ui/: __init__.py  closures.py  collection-details.blp  collection_details.py  collections.py  cover.blp  cover.py  game-details.blp  game-item.blp  game_details.py  game_item.py  games.py  meson.build  shortcuts-dialog-mac.blp  shortcuts-dialog.blp  sources.py  style.css  template.py  ui.gresource.xml.in  window.blp  window.py
cartridges/utils/: create_dialog.py  migrate_files_v1_to_v2.py  relative_date.py  run_executable.py  save_cover.py  sqlite.py  steam.py  steamgriddb.py
data/: cartridges.gresource.xml  cartridges.gresource.xml.in  cartridges.in  data.gresource.xml.in  hu.kramo.Cartridges.desktop.in  hu.kramo.Cartridges.gschema.xml  hu.kramo.Cartridges.gschema.xml.in  hu.kramo.Cartridges.metainfo.xml.in  hu.kramo.GameShelf.desktop.in  hu.kramo.GameShelf.gschema.xml  hu.kramo.GameShelf.metainfo.xml.in  meson.build  page.kramo.Cartridges.desktop.in  page.kramo.Cartridges.gschema.xml.in  page.kramo.Cartridges.metainfo.xml.in  page.kramo.Cartridges.service.in
data/gtk/: details-dialog.blp  details-window.blp  details_window.blp  game.blp  help-overlay.blp  preferences.blp  shortcuts-dialog.blp  style-dark.css  style.css  window.blp
data/icons/: icons.gresource.xml.in  meson.build
docs/: game_id.json.md
flatpak/: hu.kramo.Cartridges.Devel.json  page.kramo.Cartridges.Devel.json  python3-pillow.json  python3-pybind11.json
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  be.po  ca.po  cartridges.pot  cs.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gameshelf.pot  hi.po  hr.po  hu.mo  hu.po  ia.po  ie.po  it.po  ja.po  ka.po  kk.po  ko.po  kw.po  meson.build  nb_NO.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  (+5 more)
search-provider/: cartridges-search-provider.in  cartridges-sp.in  hu.kramo.Cartridges.SearchProvider.service.in  meson.build  page.kramo.Cartridges.SearchProvider.ini
src/: __builtins__.pyi  cartridges.gresource.xml  cartridges.in  details_window.py  game.py  game2.py  game_cover.py  gameshelf.gresource.xml  gameshelf.in  keyboard_emulator.py  main.py  meson.build  preferences.py  shared.py  shared.py.in  window.blp  window.py
src/errors/: error_producer.py  friendly_error.py
src/gtk/: game.blp  help-overlay.blp  preferences.blp
src/importer/: bottles_source.py  decorators.py  desktop_source.py  flatpak_source.py  heroic_source.py  importer.py  itch_source.py  legendary_source.py  location.py  lutris_source.py  retroarch_source.py  source.py  steam_source.py
src/importer/sources/: bottles_source.py  desktop_source.py  dolphin_source.py  flatpak_source.py  heroic_source.py  itch_source.py  legendary_source.py  location.py  lutris_source.py  retroarch_source.py  source.py  steam_source.py  yuzu_source.py
src/importers/: bottles_importer.py  heroic_importer.py  itch_importer.py  legendary_importer.py  lutris_importer.py  steam_importer.py
src/logging/: color_log_formatter.py  session_file_handler.py  setup.py
src/managers/: game_manager.py
src/store/: display_manager.py  file_manager.py  manager.py  pipeline.py  sgdb_manager.py  steam_api_manager.py  store.py
src/store/managers/: async_manager.py  cover_manager.py  display_manager.py  file_manager.py  format_update_manager.py  itch_cover_manager.py  local_cover_manager.py  manager.py  online_cover_manager.py  sgdb_manager.py  steam_api_manager.py
src/utils/: bottles_parser.py  check_install.py  create_details_window.py  create_dialog.py  decorators.py  display_animation.py  dolphin_cache_reader.py  game_data_to_json.py  get_cover.py  get_games.py  heroic_parser.py  importer.py  itch_parser.py  lutris_parser.py  migrate_files_v1_to_v2.py  rate_limiter.py  relative_date.py  run_command.py  save_cover.py  save_game.py  save_games.py  sqlite.py  steam.py  steam_parser.py  steamgriddb.py  task.py  toggle_hidden.py
subprojects/: blueprint-compiler.wrap
windows/: Cartridges.iss  Cartridges.iss.in
